--- a/src/sprintTask1.html
+++ b/src/sprintTask1.html
@@ -26,7 +26,9 @@
         Khabib to Conor: "It is the same thing"
       </h2>
       <p>It's the same thing as the  previous fight. If it's a first round finish, I'd back Conor. From the second and further, then Dustin wins. </p>
+
       <p>The Russian - who retired in March with a record of 29-0 with eight knockouts - has submisiion victories with over both McGregor and Poirier, so he knows a thing or two about their game plans and skillsets</p>
+
       <p>He memorably scaled the Octagon at UFC 229 after defeating McGregor to attack his cornerman Dillon Danis, who had reportedly shouted insults at Khabib following the fight. The russian has turned to promoting following his retirement and is mentoring fellow lightweight Islam Makhachev - currently ranked #9 in the UFC rankings</p>
     </div>
   </div>
@@ -52,7 +54,7 @@
       </div>
       <div class = "latestnewstext">
         <h4>Alvaro Morata scores to Torino</h4>
-          <p>Real Madrid striker Eden Hazard injured again on last match with Sevilla FC.</p>
+          <p>Alvaro Morata scored 2 goals against Torino on 27th round of Serie A</p>
           <div class = "button">
             <a href = "#">Read More</a>
           </div>
